--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,10 @@
 $angular-seed-primary: mat-palette($mat-pink);
 $angular-seed-accent: mat-palette($mat-yellow, A200, A100, A400);
 $angular-seed-warn: mat-palette($mat-orange);
-$angular-seed-theme: mat-light-theme($angular-seed-primary, $angular-seed-accent, $angular-seed-warn);
+$angular-seed-theme: mat-dark-theme($angular-seed-primary, $angular-seed-accent, $angular-seed-warn);
 @include angular-material-theme($angular-seed-theme);
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: 'Jura', sans-serif; }
+.container {
+  margin: 1rem;
+}
