--- a/src/components/data-sheet/data-sheet.component.html
+++ b/src/components/data-sheet/data-sheet.component.html
@@ -17,6 +17,17 @@
       <div mat-line>Languages</div>
       <div mat-line> Spanish, English</div>
     </mat-list-item>
+    <mat-list-item>
+      <fa-icon matListIcon [icon]="icons.start"></fa-icon>
+      <div mat-line>Expirience</div>
+      <div mat-line> 5 years</div>
+    </mat-list-item>
     <mat-divider></mat-divider>
+    <div mat-subheader>Education</div>
+    <mat-list-item>
+      <fa-icon matListIcon [icon]="icons.university"></fa-icon>
+      <div mat-line>UPEMOR, Morelos Mexico</div>
+      <div mat-line> Barchelo's Computer Science</div>
+    </mat-list-item>
   </mat-list>
 </div>
