--- a/src/screens/home/home.component.html
+++ b/src/screens/home/home.component.html
@@ -7,7 +7,32 @@
       <app-data-sheet></app-data-sheet>
     </div>
     <div fxFlex>
-      <h1>hello</h1>
+      <mat-tab-group>
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <fa-icon [icon]="icons.code"></fa-icon>
+            Languages
+          </ng-template>
+          Content 1
+        </mat-tab>
+
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <!--<mat-icon class="example-tab-icon">thumb_up</mat-icon>-->
+            Tools
+          </ng-template>
+          Content 2
+        </mat-tab>
+
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <!--<mat-icon class="example-tab-icon">thumb_up</mat-icon>-->
+            More
+          </ng-template>
+
+          Content 3
+        </mat-tab>
+      </mat-tab-group>
     </div>
   </div>
 </mat-drawer-container>
