--- a/src/screens/home/home.component.html
+++ b/src/screens/home/home.component.html
@@ -1,3 +1,38 @@
-<div fxFill fxLayout="column" fxLayoutAlign="center center" >
-  <h1>Hello World!</h1>
-</div>
+<mat-drawer-container fxFill>
+  <mat-drawer #drawer mode="side">
+    <p>Auto-resizing sidenav</p>
+  </mat-drawer>
+  <div fxFill fxLayout="row">
+    <div fxFlex="20" fxFlexFill>
+      <app-data-sheet></app-data-sheet>
+    </div>
+    <div fxFlex>
+      <mat-tab-group>
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <fa-icon [icon]="icons.code"></fa-icon>
+            Languages
+          </ng-template>
+          Content 1
+        </mat-tab>
+
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <!--<mat-icon class="example-tab-icon">thumb_up</mat-icon>-->
+            Tools
+          </ng-template>
+          Content 2
+        </mat-tab>
+
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <!--<mat-icon class="example-tab-icon">thumb_up</mat-icon>-->
+            More
+          </ng-template>
+
+          Content 3
+        </mat-tab>
+      </mat-tab-group>
+    </div>
+  </div>
+</mat-drawer-container>
