--- a/src/components/data-sheet/data-sheet.component.html
+++ b/src/components/data-sheet/data-sheet.component.html
@@ -1,33 +1,30 @@
-<div fxFill class="container">
-  <h1>Hello World!</h1>
-  <mat-list>
-    <div mat-subheader>Personal data</div>
-    <mat-list-item>
-      <fa-icon matListIcon [icon]="icons.smile"></fa-icon>
-      <div mat-line>Name</div>
-      <div mat-line> Erika Valdes</div>
-    </mat-list-item>
-    <mat-list-item>
-      <fa-icon matListIcon [icon]="icons.americas"></fa-icon>
-      <div mat-line>Location</div>
-      <div mat-line> Mexico City, Mexico</div>
-    </mat-list-item>
-    <mat-list-item>
-      <fa-icon matListIcon [icon]="icons.language"></fa-icon>
-      <div mat-line>Languages</div>
-      <div mat-line> Spanish, English</div>
-    </mat-list-item>
-    <mat-list-item>
-      <fa-icon matListIcon [icon]="icons.start"></fa-icon>
-      <div mat-line>Expirience</div>
-      <div mat-line> 5 years</div>
-    </mat-list-item>
-    <mat-divider></mat-divider>
-    <div mat-subheader>Education</div>
-    <mat-list-item>
-      <fa-icon matListIcon [icon]="icons.university"></fa-icon>
-      <div mat-line>UPEMOR, Morelos Mexico</div>
-      <div mat-line> Barchelo's Computer Science</div>
-    </mat-list-item>
-  </mat-list>
-</div>
+<mat-list>
+  <div mat-subheader i18n="@@personalDataSubheader">Personal data</div>
+  <mat-list-item>
+    <fa-icon matListIcon [icon]="icons.smile"></fa-icon>
+    <div mat-line i18n="@@nameLabel">Name</div>
+    <div mat-line> Erika Valdes</div>
+  </mat-list-item>
+  <mat-list-item>
+    <fa-icon matListIcon [icon]="icons.americas"></fa-icon>
+    <div mat-line i18n="@@locationLabel">Location</div>
+    <div mat-line i18n="@@locationValue"> Mexico City, Mexico</div>
+  </mat-list-item>
+  <mat-list-item>
+    <fa-icon matListIcon [icon]="icons.language"></fa-icon>
+    <div mat-line i18n="@@languagesLabel">Languages</div>
+    <div mat-line i18n="@@languagesValue"> Spanish, English</div>
+  </mat-list-item>
+  <mat-list-item>
+    <fa-icon matListIcon [icon]="icons.start"></fa-icon>
+    <div mat-line i18n="@@experienceLabel">Experience</div>
+    <div mat-line i18n="@@experienceValue"> 5 years</div>
+  </mat-list-item>
+  <mat-divider></mat-divider>
+  <div mat-subheader i18n="@@educationSubheader">Education</div>
+  <mat-list-item>
+    <fa-icon matListIcon [icon]="icons.university"></fa-icon>
+    <div mat-line i18n="@@educationLabel">UPEMOR, Morelos Mexico</div>
+    <div mat-line i18n="@@educationValue"> Bachelor's Degree in CS</div>
+  </mat-list-item>
+</mat-list>
