--- a/src/screens/home/home.component.html
+++ b/src/screens/home/home.component.html
@@ -1,38 +1,30 @@
-<mat-drawer-container fxFill>
-  <mat-drawer #drawer mode="side">
-    <p>Auto-resizing sidenav</p>
-  </mat-drawer>
-  <div fxFill fxLayout="row">
-    <div fxFlex="20" fxFlexFill>
-      <app-data-sheet></app-data-sheet>
+<mat-sidenav-container fxFill>
+  <mat-sidenav-content>
+    <mat-toolbar color="primary" class="mat-elevation-z2">
+      <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
+        <span><strong>Hello World!</strong></span>
+        <div>
+          <a mat-icon-button aria-label="GitHub" target="_blank" href="https://github.com/envm92/hello_Mimi">
+            <fa-icon class="menu-icon" [icon]="icons.gitHub"></fa-icon>
+          </a>
+          <button mat-icon-button [matMenuTriggerFor]="menu">
+            <fa-icon class="menu-icon" [icon]="icons.language"></fa-icon>
+          </button>
+          <mat-menu #menu="matMenu">
+            <a mat-menu-item href="/en/index.html">English</a>
+            <a mat-menu-item href="/es/index.html">Spanish</a>
+          </mat-menu>
+        </div>
+      </mat-toolbar-row>
+    </mat-toolbar>
+    <div fxFill fxLayout="column" fxLayout.gt-md="row">
+      <div fxFlex.gt-md="20">
+        <app-data-sheet></app-data-sheet>
+      </div>
+      <div fxFlex fxLayout="column">
+        <app-section *ngFor="let section of sections" [section]="section"></app-section>
+      </div>
     </div>
-    <div fxFlex>
-      <mat-tab-group>
-        <mat-tab>
-          <ng-template mat-tab-label>
-            <fa-icon [icon]="icons.code"></fa-icon>
-            Languages
-          </ng-template>
-          Content 1
-        </mat-tab>
+  </mat-sidenav-content>
+</mat-sidenav-container>
 
-        <mat-tab>
-          <ng-template mat-tab-label>
-            <!--<mat-icon class="example-tab-icon">thumb_up</mat-icon>-->
-            Tools
-          </ng-template>
-          Content 2
-        </mat-tab>
-
-        <mat-tab>
-          <ng-template mat-tab-label>
-            <!--<mat-icon class="example-tab-icon">thumb_up</mat-icon>-->
-            More
-          </ng-template>
-
-          Content 3
-        </mat-tab>
-      </mat-tab-group>
-    </div>
-  </div>
-</mat-drawer-container>
